--- a/DemoMQTT/Base.lproj/Main.storyboard
+++ b/DemoMQTT/Base.lproj/Main.storyboard
@@ -23,8 +23,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Received message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7VL-gF-4yn">
-                                <rect key="frame" x="40" y="210" width="142.66666666666666" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Received message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7VL-gF-4yn">
+                                <rect key="frame" x="40" y="210" width="313" height="20.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" name="AccentColor"/>
                                 <nil key="highlightedColor"/>
@@ -37,6 +37,7 @@
                             <constraint firstItem="7VL-gF-4yn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="Zch-2X-X2j"/>
                             <constraint firstItem="dhV-hU-0nV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="ajs-he-NE8"/>
                             <constraint firstItem="7VL-gF-4yn" firstAttribute="top" secondItem="dhV-hU-0nV" secondAttribute="bottom" constant="30" id="pyu-Tz-yr7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7VL-gF-4yn" secondAttribute="trailing" constant="40" id="xfQ-SY-rQx"/>
                         </constraints>
                     </view>
                     <connections>
